--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "e2e": "npx playwright test"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +33,9 @@
     "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
+    "@playwright/test": "^1.38.0",
     "@types/jest": "29.5.5",
+    "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.49.0",
