--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "@angular/animations": "16.2.0",
+    "@angular/common": "16.2.0",
+    "@angular/compiler": "16.2.0",
+    "@angular/core": "16.2.0",
+    "@angular/forms": "16.2.0",
+    "@angular/platform-browser": "16.2.0",
+    "@angular/platform-browser-dynamic": "16.2.0",
+    "@angular/router": "16.2.0",
+    "rxjs": "7.8.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.2",
+    "@angular-devkit/build-angular": "16.2.2",
     "@angular-eslint/builder": "16.2.0",
     "@angular-eslint/eslint-plugin": "16.2.0",
     "@angular-eslint/eslint-plugin-template": "16.2.0",
     "@angular-eslint/schematics": "16.2.0",
     "@angular-eslint/template-parser": "16.2.0",
-    "@angular/cli": "~16.2.2",
-    "@angular/compiler-cli": "^16.2.0",
-    "@playwright/test": "^1.38.0",
+    "@angular/cli": "16.2.2",
+    "@angular/compiler-cli": "16.2.0",
+    "@playwright/test": "1.38.0",
     "@types/jest": "29.5.5",
-    "@types/node": "^20.6.3",
+    "@types/node": "20.6.3",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "eslint": "^8.49.0",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^13.1.2",
+    "eslint": "8.49.0",
+    "jest": "29.7.0",
+    "jest-preset-angular": "13.1.2",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "5.1.3"
   }
 }
